fix: fixed the horizontal overflow caused from the nav

--- a/src/MoneyInput/MoneyInput.module.css
+++ b/src/MoneyInput/MoneyInput.module.css
@@ -103,3 +103,7 @@ nav {
     margin-bottom: 3rem;
     background-color: var(--betterplace-external-color-blue-twitter);
 }
+
+body {
+    overflow-x: hidden;
+}
